--- a/templates/Admin/user/showClient.html.twig
+++ b/templates/Admin/user/showClient.html.twig
@@ -1,8 +1,8 @@
 <div class="container-fluid">
-    <h1>Información del cliente</h1>
+    <h1>{{ client.idUser.name }}  {{ client.idUser.lastname }}</h1>
 
     <fieldset class="mt-3 p-3" >
-        <h5>Datos del cliente</h5>
+        <br>
         <table class="table">
             <thead>
             <tr>
