--- a/templates/Admin/user/new.html.twig
+++ b/templates/Admin/user/new.html.twig
@@ -126,7 +126,7 @@
                     </div>
                 </fieldset>
                 <div class="row mt-2 text-center mb-4">
-                    <div class="col-md-12">
+                    <div class="col-md-12 mt-3">
                         <div id="info-user"></div>
                         <button class="btn btn-dark" type="submit" id="btn-save-user" disabled>Guardar</button>
                     </div>
