--- a/public/css/thecircle.css
+++ b/public/css/thecircle.css
@@ -33,7 +33,7 @@
 }
 
 .thecircle .navbar {
-    background-color: black !important;
+    background-color: rgb(54, 48, 48) !important;
 }
 
 .thecircle .navbar a, .thecircle .navbar a {
